[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "binda"
version = "0.1.1"
authors = [
  { name="Jamie Cash", email="jlcash@gmail.com" },
]
description = "Read and write binary data using Pandas"
readme = "README.md"
dependencies = [
  'pandas',
  'numpy',
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jamiecash/binda"
"Bug Tracker" = "https://github.com/jamiecash/binda/issues"